--- a/index.html
+++ b/index.html
@@ -25,18 +25,21 @@
                     <p class="short-information__text">Привет! Надо сюда будет что-то написать</p>
                 </div>
             </section>
-            <section class="education" id="education">
-                <h1 class="education__title title">Образование</h1>
-                <div class="school card card-education">
-                    <p class="education-information">ГОУ ЯО Средняя школа №33 им. К. Маркса с углубленным изучением математики</p>
-                </div>
-                <div class="visiting-school card card-education">
-                    <p class="education-information">Образовательные программы по математике ОЦ "Сириус" и иных учебных лагерей</p>
-                </div>
-                <div class="university card card-education">
-                    <p class="education-information">Московский физико-технический университет <br> Высшая школа программной инженерии</p>
-                </div>
-            </section>
+            <div class="education-block">
+                <section class="education" id="education">
+                    <h1 class="education__title title">Образование</h1>
+                    <div class="school card card-education">
+                        <p class="education-information">ГОУ ЯО Средняя школа №33 им. К. Маркса с углубленным изучением математики</p>
+                    </div>
+                    <div class="visiting-school card card-education">
+                        <p class="education-information">Образовательные программы по математике ОЦ "Сириус" и иных учебных лагерей</p>
+                    </div>
+                    <div class="university card card-education">
+                        <p class="education-information">Московский физико-технический университет <br> Высшая школа программной инженерии</p>
+                    </div>
+                </section>
+            </div>
+            
             <section class="skills" id="skills">
                 <h1 class="skills_title title">О прошлом и настоящем</h1>
                 <div class="olimpiads card card-skills"></div>
