--- a/index.html
+++ b/index.html
@@ -29,23 +29,40 @@
                 <section class="education" id="education">
                     <h1 class="education__title title">Образование</h1>
                     <div class="school card card-education">
-                        <p class="education-information">ГОУ ЯО Средняя школа №33 им. К. Маркса с углубленным изучением математики</p>
+                        <p class="education-information text">ГОУ ЯО Средняя школа №33 им. К. Маркса с углубленным изучением математики</p>
                     </div>
                     <div class="visiting-school card card-education">
-                        <p class="education-information">Образовательные программы по математике ОЦ "Сириус" и иных учебных лагерей</p>
+                        <p class="education-information text">Образовательные программы по математике ОЦ "Сириус" и иных учебных лагерей</p>
                     </div>
                     <div class="university card card-education">
-                        <p class="education-information">Московский физико-технический университет <br> Высшая школа программной инженерии</p>
+                        <p class="education-information text">Московский физико-технический университет <br> Высшая школа программной инженерии</p>
                     </div>
                 </section>
             </div>
             
             <section class="skills" id="skills">
                 <h1 class="skills_title title">О прошлом и настоящем</h1>
-                <div class="olimpiads card card-skills"></div>
-                <div class="exam card card-skills"></div>
-                <div class="experience card card-skills"></div>
-                <div class="basketball card card-skills"></div>
+                <div class="olimpiads card card-skills">
+                    <ul class="list">
+                        <li>Призер и победитель региональных и муниципальных этапов ВСоШ по математике, информатике, экономике</li>
+                        <li>Призер олимпиады "Физтех" по математике</li>
+                        <li>Призер олимпиады "МИЭТ" по математике</li>
+                        <li>Победитель олимпиады "МИСИС зажигает звезды"</li>
+                      </ul>
+                </div>
+                <div class="exam card card-skills">
+                    <h2 class="result">Результаты сдачи ЕГЭ</h2>
+                    <ul class="list">
+                        <li>Математика: 98 баллов</li>
+                        <li>Информатика: 98 баллов</li>
+                    </ul>
+                </div>
+                <div class="experience card card-skills">
+                    <p class="experience-information text">Опыт работы учебным куратором по математике в онлайн-школе</p>
+                </div>
+                <div class="basketball card card-skills">
+                    <p class="experience-information text">Опыт общения с абсолютно разными по характеру людьми, который появился в процессе занятия баскетбольным судейством</p>
+                </div>
             </section>
         </main>
     </body>
