--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="ru">
     <head>
         <meta charset="UNF-8">
-        <link rel="stylesheet" href="../Frontent_Project/style.css">
+        <link rel="stylesheet" href="../Frontent_Project/style/style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="портфолио Мария Лебедева МФТИ">
+        <meta name="keywords" content="портфоли экзамены егэ олимпиады подготовка результаты">
+        <meta name="author" content="Мария Лебедева">
         <title>Портфолио</title>
     </head>
     <body class="page">
@@ -18,11 +21,11 @@
         <main class="content">
             <section class="short-information" id="short-information">
                 <picture>
-                    <img class="short-information__image" src="../Frontent_Project/main_photo.jpg" alt="Здесь должно быть фото">
+                    <img class="short-information__image" src="../Frontent_Project/image/main_photo.jpg" alt="Здесь должно быть фото">
                 </picture>
                 <div class="short-information-description">
-                    <h1 class="short-information__title">Лебедева Мария</h1>
-                    <p class="short-information__text">Привет! Надо сюда будет что-то написать</p>
+                    <h1 class="short-information__title title">Лебедева Мария</h1>
+                    <p class="short-information__text text">Привет! Надо сюда будет что-то написать</p>
                 </div>
             </section>
             <div class="education-block">
@@ -43,18 +46,18 @@
             <section class="skills" id="skills">
                 <h1 class="skills_title title">О прошлом и настоящем</h1>
                 <div class="olimpiads card card-skills">
-                    <ul class="list">
-                        <li>Призер и победитель региональных и муниципальных этапов ВСоШ по математике, информатике, экономике</li>
-                        <li>Призер олимпиады "Физтех" по математике</li>
-                        <li>Призер олимпиады "МИЭТ" по математике</li>
-                        <li>Победитель олимпиады "МИСИС зажигает звезды"</li>
+                    <ul class="list list-olimpiads">
+                        <li class="text">Призер и победитель региональных и муниципальных этапов ВСоШ по математике, информатике, экономике</li>
+                        <li class="text">Призер олимпиады "Физтех" по математике</li>
+                        <li class="text">Призер олимпиады "МИЭТ" по математике</li>
+                        <li class="text">Победитель олимпиады "МИСИС зажигает звезды"</li>
                       </ul>
                 </div>
                 <div class="exam card card-skills">
                     <h2 class="result">Результаты сдачи ЕГЭ</h2>
                     <ul class="list">
-                        <li>Математика: 98 баллов</li>
-                        <li>Информатика: 98 баллов</li>
+                        <li class="text">Математика: 98 баллов</li>
+                        <li class="text">Информатика: 98 баллов</li>
                     </ul>
                 </div>
                 <div class="experience card card-skills">
@@ -68,10 +71,10 @@
     </body>
     <footer class="footer" id="contacts">
         <a href="https://t.me/Roachhhhhh">
-            <img  class="footer__icon" src="../Frontent_Project/telegram.png" alt="Загрузка..">
+            <img  class="footer__icon" src="../Frontent_Project/image/telegram.png" alt="Загрузка..">
           </a>
           <a href="https://vk.com/id318067167">
-            <img  class="footer__icon" src="../Frontent_Project/VK.png" alt="Загрузка..">
+            <img  class="footer__icon" src="../Frontent_Project/image/VK.png" alt="Загрузка..">
           </a>
     </footer>
 </html> 
