--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="../Frontent_Project/style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="портфолио Мария Лебедева МФТИ">
-        <meta name="keywords" content="портфоли экзамены егэ олимпиады подготовка результаты">
+        <meta name="keywords" content="портфолио экзамены егэ олимпиады подготовка результаты">
         <meta name="author" content="Мария Лебедева">
         <title>Портфолио</title>
     </head>
@@ -46,12 +46,7 @@
             <section class="skills" id="skills">
                 <h1 class="skills_title title">О прошлом и настоящем</h1>
                 <div class="olimpiads card-skills card">
-                    <ul class="list list-olimpiads">
-                        <li class=" text-olimp text">Призер и победитель региональных и муниципальных этапов ВСоШ по математике, информатике, экономике</li>
-                        <li class="text text-olimp">Призер олимпиады "Физтех" по математике</li>
-                        <li class="text text-olimp">Призер олимпиады "МИЭТ" по математике</li>
-                        <li class="text text-olimp">Победитель олимпиады "МИСИС зажигает звезды"</li>
-                      </ul>
+                    <p class="text">Призер и победитель региональных этапов ВСоШ и перечневых олимпиад</p>
                 </div>
                 <div class="exam card-skills card">
                     <h2 class="result">Результаты сдачи ЕГЭ</h2>
@@ -78,4 +73,3 @@
           </a>
     </footer>
 </html> 
-
