--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <section class="education" id="education">
                     <h1 class="education__title title">Образование</h1>
                     <div class="school card card-education">
-                        <p class="education-information text">ГОУ ЯО Средняя школа №33 им. К. Маркса с углубленным изучением математики</p>
+                        <p class="education-information text">ГОУ ЯО Средняя школа №33 <br> им. К. Маркса с углубленным изучением математики</p>
                     </div>
                     <div class="visiting-school card card-education">
                         <p class="education-information text">Образовательные программы по математике ОЦ "Сириус" и иных учебных лагерей</p>
