--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
     <head>
-        <meta charset="UNF-8">
+        <meta charset="UTF-8">
         <link rel="stylesheet" href="../Frontent_Project/style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="портфолио Мария Лебедева МФТИ">
