--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <button class="popup__close-second" type="button" aria-label="Закрыть"></button>
             <div class="popup__block-time">
                 <div class="image-cat">
-                    <img class="picture__image picture__image-cat" src="image/cat.jpg" alt="Котик">
+                    <img class="picture__image picture__image-cat" src="../Frontent_Project/image/cat.jpg" alt="Котик">
                 </div>
                 <div class="cat-text">
                     <p class="popup__title popup__text-cat">Ты еще тут?</p>
