--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="popup__block popup__block_gallery">
             <button class="popup__close" type="button" aria-label="Close"></button>
             <button class="popup__next-button" type="button" aria-label="Next image"></button>
-            <img class="popup__image" src="image/1-1.jpg" alt="Gallery image">
+            <img class="popup__image" src="../Frontent_Project/image/1-1.jpg" alt="Gallery image">
             <button class="popup__prev-button" type="button" aria-label="Previous image"></button>
         </div>
     </div>
