--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="портфолио Мария Лебедева МФТИ">
         <meta name="keywords" content="портфолио экзамены егэ олимпиады подготовка результаты">
         <meta name="author" content="Мария Лебедева">
-        <meta property="og:image" content="../Frontent_Project/image/1-1.jpg">
+        <link rel="icon" type="image" href="../Frontent_Project/image/1-1.jpg">
         <title>Портфолио</title>
     </head>
     <body class="page">
