--- a/index.html
+++ b/index.html
@@ -77,15 +77,15 @@
             <section class="picture" id="gallery">
                 <ul class="picture__list">
                     <li class="picture__card">
-                        <img class="picture__image" src="../Frontent_Project/image/1-1.jpg" alt="Здесь мое фото">
+                        <img class="picture__image picture_1" src="./image/1-1.jpg" alt="Здесь мое фото">
                     </li>
     
                     <li class="picture__card">
-                        <img class="picture__image" src="../Frontent_Project/image/2-2.jpg" alt="Здесь мое фото">
+                        <img class="picture__image picture_2" src="./image/2-2.jpg" alt="Здесь мое фото">
                     </li>
     
                     <li class="picture__card">
-                        <img class="picture__image" src="../Frontent_Project/image/3.jpg" alt="Здесь мое фото">
+                        <img class="picture__image picture_3" src="image/3.jpg" alt="Здесь мое фото">
                     </li>
                 </ul>
             </section>
@@ -117,7 +117,7 @@
         <div class="popup__block popup__block_gallery">
             <button class="popup__close" type="button" aria-label="Close"></button>
             <button class="popup__next-button" type="button" aria-label="Next image"></button>
-            <img class="popup__image" src="../Frontent_Project/image/1-1.jpg" alt="Gallery image">
+            <img class="popup__image" src="image/1-1.jpg" alt="Gallery image">
             <button class="popup__prev-button" type="button" aria-label="Previous image"></button>
         </div>
     </div>
@@ -153,7 +153,7 @@
             <button class="popup__close-second" type="button" aria-label="Закрыть"></button>
             <div class="popup__block-time">
                 <div class="image-cat">
-                    <img class="picture__image picture__image-cat" src="../Frontent_Project/image/cat.jpg" alt="Котик">
+                    <img class="popup__cat" src="image/cat.jpg" alt="Котик">
                 </div>
                 <div class="cat-text">
                     <p class="popup__title popup__text-cat">Ты еще тут?</p>
@@ -163,7 +163,7 @@
         </div>
     </div>
 
-    <script src="../Frontent_Project/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html> 
 
